zmiana ikony oraz kolorów

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,114 @@
-<!-- Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com/ -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.110971"
-      android:scaleY="0.110971"
-      android:translateX="27.6"
-      android:translateY="27.6">
-      <path android:fillColor="#FF000000" android:pathData="M194.778,241.011l-54.415,121.523c-1.271,2.839 -0.658,6.168 1.542,8.368c1.437,1.437 3.355,2.197 5.305,2.197c1.035,0 2.079,-0.214 3.063,-0.655l121.523,-54.415c1.636,-0.732 2.955,-2.026 3.719,-3.647l59.859,-126.967c1.35,-2.862 0.757,-6.264 -1.48,-8.501c-2.237,-2.238 -5.639,-2.831 -8.501,-1.48l-126.967,59.859C196.804,238.056 195.511,239.375 194.778,241.011zM207.3,249.752l55.756,55.756l-100.966,45.21L207.3,249.752zM245.4,74.17v-1.724c16.602,-3.47 29.111,-18.218 29.111,-35.835C274.511,16.423 258.087,0 237.9,0s-36.611,16.423 -36.611,36.611c0,17.617 12.509,32.365 29.111,35.835v1.724C123.09,78.13 37.008,166.647 37.008,274.908c0,110.772 90.12,200.892 200.892,200.892s200.892,-90.12 200.892,-200.892C438.792,166.647 352.71,78.13 245.4,74.17zM216.289,36.611C216.289,24.694 225.983,15 237.9,15s21.611,9.694 21.611,21.611c0,9.281 -5.881,17.212 -14.111,20.267v-5.712c0,-4.142 -3.358,-7.5 -7.5,-7.5s-7.5,3.358 -7.5,7.5v5.712C222.17,53.823 216.289,45.891 216.289,36.611zM237.9,460.8c-102.501,0 -185.892,-83.391 -185.892,-185.892S135.399,89.016 237.9,89.016s185.892,83.391 185.892,185.892S340.401,460.8 237.9,460.8zM397.784,274.992c0,0.097 0.004,0.193 0.004,0.29c-0.041,28.243 -7.665,56.114 -22.048,80.598c-29.507,50.232 -82.402,78.393 -136.813,78.838c-0.337,0.046 -0.678,0.078 -1.028,0.078c-0.327,0 -0.648,-0.028 -0.964,-0.069c-27.271,-0.116 -54.847,-7.198 -80.008,-21.979c-50.248,-29.518 -78.417,-82.424 -78.844,-136.854c-0.043,-0.324 -0.072,-0.652 -0.072,-0.987c0,-0.321 0.027,-0.635 0.066,-0.946c0.116,-27.273 7.2,-54.864 21.981,-80.027c29.517,-50.246 82.419,-78.413 136.847,-78.843c0.326,-0.043 0.657,-0.073 0.995,-0.073c0.324,0 0.64,0.027 0.953,0.067c27.271,0.117 54.859,7.201 80.019,21.981c3.571,2.098 4.766,6.694 2.668,10.266c-2.098,3.571 -6.693,4.768 -10.266,2.668c-20.76,-12.196 -43.344,-18.606 -65.875,-19.736v22.79c0,4.142 -3.358,7.5 -7.5,7.5s-7.5,-3.358 -7.5,-7.5v-22.764c-46.962,2.508 -91.856,27.745 -117.408,71.243c-12.195,20.76 -18.605,43.344 -19.736,65.875h22.79c4.142,0 7.5,3.358 7.5,7.5s-3.358,7.5 -7.5,7.5H93.283c2.508,46.962 27.745,91.856 71.243,117.408c20.399,11.983 42.905,18.66 65.875,19.824v-22.878c0,-4.142 3.358,-7.5 7.5,-7.5s7.5,3.358 7.5,7.5v22.856c9.668,-0.521 19.354,-2.012 28.939,-4.503c37.45,-9.733 68.869,-33.468 88.468,-66.832c11.932,-20.312 18.483,-42.97 19.661,-65.875h-22.715c-4.142,0 -7.5,-3.358 -7.5,-7.5s3.358,-7.5 7.5,-7.5h22.726c-1.121,-21.894 -7.162,-43.594 -18.151,-63.271c-2.02,-3.616 -0.726,-8.185 2.891,-10.205c3.616,-2.021 8.185,-0.726 10.205,2.891c13.276,23.771 20.305,50.708 20.357,77.932c0.001,0.052 0.008,0.102 0.008,0.153C397.789,274.936 397.785,274.964 397.784,274.992z"
-          tools:ignore="VectorPath" />
+  <group android:scaleX="0.37102267"
+      android:scaleY="0.37102267"
+      android:translateX="13.754348"
+      android:translateY="16.531864">
+    <path
+        android:pathData="m109.09,12.28c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.38,0 -83.04,0 -88.97,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.38,0 83.04,0 88.97,0z"
+        android:fillColor="#ff7575"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m109.09,12.28c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.38,0 -83.04,0 -88.97,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.38,0 83.04,0 88.97,0z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.53"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m20.12,12.28v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97M73.3,12.28v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97M99.9,12.28v88.97m8.86,-88.97v88.97M20.12,12.28h88.97m-88.97,8.86h88.97M20.12,30h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97M20.12,56.6h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97"
+        android:fillColor="#000000"
+        android:fillAlpha="0"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m20.12,12.28v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97M73.3,12.28v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97M99.9,12.28v88.97m8.86,-88.97v88.97M20.12,12.28h88.97m-88.97,8.86h88.97M20.12,30h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97M20.12,56.6h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97"
+        android:strokeWidth="1.06"
+        android:fillAlpha="0"
+        android:strokeColor="#b8b8b8"/>
+    <path
+        android:pathData="m197.74,100.92c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.39,0 -83.05,0 -88.98,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.39,0 83.04,0 88.98,0z"
+        android:fillColor="#f5f471"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m197.74,100.92c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.39,0 -83.05,0 -88.98,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.39,0 83.04,0 88.98,0z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.53"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m108.76,100.92v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m-88.65,-88.97h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98"
+        android:fillColor="#000000"
+        android:fillAlpha="0"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m108.76,100.92v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m-88.65,-88.97h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98"
+        android:strokeWidth="1.06"
+        android:fillAlpha="0"
+        android:strokeColor="#b8b8b8"/>
+    <path
+        android:pathData="m109.09,100.92c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.38,0 -83.04,0 -88.97,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.38,0 83.04,0 88.97,0z"
+        android:fillColor="#9aed97"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m109.09,100.92c0,0 0,0 0,0 0,53.38 0,83.04 0,88.97 0,0 0,0 0,0 -53.38,0 -83.04,0 -88.97,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.97 0,0 0,0 0,0 53.38,0 83.04,0 88.97,0z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.53"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m20.12,100.92v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97M20.12,100.92h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97"
+        android:fillColor="#000000"
+        android:fillAlpha="0"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m20.12,100.92v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97m8.87,-88.97v88.97m8.86,-88.97v88.97M20.12,100.92h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97m-88.97,8.87h88.97m-88.97,8.86h88.97"
+        android:strokeWidth="1.06"
+        android:fillAlpha="0"
+        android:strokeColor="#b8b8b8"/>
+    <path
+        android:pathData="m197.74,12.27c0,0 0,0 0,0 0,53.39 0,83.05 0,88.98 0,0 0,0 0,0 -53.39,0 -83.05,0 -88.98,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.98 0,0 0,0 0,0 53.39,0 83.05,0 88.98,0z"
+        android:fillColor="#42aaff"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m197.74,12.27c0,0 0,0 0,0 0,53.39 0,83.05 0,88.98 0,0 0,0 0,0 -53.39,0 -83.05,0 -88.98,0 0,0 0,0 0,0 0,-53.38 0,-83.04 0,-88.98 0,0 0,0 0,0 53.39,0 83.05,0 88.98,0z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.53"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m108.76,12.27v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98M108.76,12.27h88.98m-88.98,8.87h88.98M108.76,30h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98"
+        android:fillColor="#000000"
+        android:fillAlpha="0"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m108.76,12.27v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98m8.86,-88.98v88.98m8.87,-88.98v88.98M108.76,12.27h88.98m-88.98,8.87h88.98M108.76,30h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98m-88.98,8.86h88.98m-88.98,8.86h88.98m-88.98,8.87h88.98"
+        android:strokeWidth="1.06"
+        android:fillAlpha="0"
+        android:strokeColor="#b8b8b8"/>
+    <path
+        android:pathData="m19.76,100.49v0.87h178.01v-0.87z"
+        android:fillColor="#010101"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m19.76,100.49v0.87h178.01v-0.87z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.57"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m108.24,11.92v178h1.05v-178z"
+        android:fillColor="#010101"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m108.24,11.92v178h1.05v-178z"
+        android:strokeAlpha="0"
+        android:strokeWidth="0.63"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m120.74,69.34h-50v64.03h75L145.74,96.02h12.5v48.02h-100L58.24,58.67h62.5zM118.3,107.81v0l-14.49,12.37 -26.83,-22.91 14.48,-12.36 12.35,10.53 33.7,-28.76 14.48,12.36z"
+        android:fillColor="#1d181d"/>
   </group>
 </vector>
