--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E0E0E0</color>
-    <color name="colorPrimaryDark">#FBB8AC</color>
-    <color name="colorAccent">#FEDBD0</color>
-    <color name="textColorPrimary">#442C2E</color>
-    <color name="buttonStrongAgree">#2e7d32</color>
-    <color name="buttonAgree">#43a047</color>
-    <color name="buttonNeutral">#9e9e9e</color>
-    <color name="buttonStrongDisagree">#d32f2f</color>
-    <color name="buttonDisgree">#ef5350</color>
+    <color name="colorPrimary">#b0bec5</color>
+    <color name="colorPrimaryDark">#808e95</color>
+    <color name="colorAccent">#c1d5e0</color>
+    <color name="textColorPrimary">#000000</color>
+    <color name="buttonStrongAgree">#43a047</color>
+    <color name="buttonAgree">#76d275</color>
+    <color name="buttonNeutral">#808e95</color>
+    <color name="buttonStrongDisagree">#e53935</color>
+    <color name="buttonDisgree">#ff6f60</color>
 </resources>
