--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,35 +12,41 @@
     <style name="Widget.PC.Button" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="backgroundTint">?attr/colorPrimaryDark</item>
+        <item name="android:textSize">15sp</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
 
     <style name="Widget.PC.Button.StrongAgree" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
         <item name="backgroundTint">@color/buttonStrongAgree</item>
+        <item name="android:textSize">15sp</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
 
     <style name="Widget.PC.Button.Agree" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15sp</item>
         <item name="backgroundTint">@color/buttonAgree</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
 
     <style name="Widget.PC.Button.Disagree" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15sp</item>
         <item name="backgroundTint">@color/buttonDisgree</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
 
     <style name="Widget.PC.Button.StrongDisagree" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15sp</item>
         <item name="backgroundTint">@color/buttonStrongDisagree</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
 
     <style name="Widget.PC.Button.Neutral" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15sp</item>
         <item name="backgroundTint">@color/buttonNeutral</item>
         <item name="cornerRadius">@dimen/radius_medium</item>
     </style>
